// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EncryptionUserSettingsTab /> should display a verify button when the encryption is not set up 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsTab mx_EncryptionUserSettingsTab"
    data-testid="encryptionTab"
  >
    <div
      class="mx_SettingsTab_sections"
    >
      <div
        class="mx_SettingsSection mx_SettingsSection_newUi"
      >
        <div
          class="mx_SettingsSection_header"
        >
          <h2
            class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 mx_SettingsHeader"
          >
            Device not verified 
          </h2>
          <div
            class="mx_SettingsSubheader"
          >
            <span
              class="mx_SettingsSubheader_error"
            >
              <svg
                fill="currentColor"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
                />
              </svg>
              You need to verify this device in order to view your encryption settings.
            </span>
          </div>
        </div>
        <button
          class="_button_vczzf_8 _has-icon_vczzf_57"
          data-kind="primary"
          data-size="sm"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 18q-.824 0-1.412-.587A1.93 1.93 0 0 1 2 16V5q0-.824.587-1.412A1.93 1.93 0 0 1 4 3h16q.824 0 1.413.587Q22 4.176 22 5v11q0 .824-.587 1.413A1.93 1.93 0 0 1 20 18zm0-2h16V5H4zm-2 5a.97.97 0 0 1-.712-.288A.97.97 0 0 1 1 20q0-.424.288-.712A.97.97 0 0 1 2 19h20q.424 0 .712.288.288.287.288.712 0 .424-.288.712A.97.97 0 0 1 22 21z"
            />
          </svg>
          Verify this device
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EncryptionUserSettingsTab /> should display the change recovery key panel when the user clicks on the change recovery button 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsTab mx_EncryptionUserSettingsTab"
    data-testid="encryptionTab"
  >
    <div
      class="mx_SettingsTab_sections"
    />
  </div>
</DocumentFragment>
`;

exports[`<EncryptionUserSettingsTab /> should display the recovery out of sync panel when secrets are not cached 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsTab mx_EncryptionUserSettingsTab"
    data-testid="encryptionTab"
  >
    <div
      class="mx_SettingsTab_sections"
    >
      <div
        class="mx_SettingsSection mx_SettingsSection_newUi"
        data-testid="recoveryPanel"
      >
        <div
          class="mx_SettingsSection_header"
        >
          <h2
            class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 mx_SettingsHeader"
          >
            Recovery 
          </h2>
          <div
            class="mx_SettingsSubheader"
          >
            Recover your cryptographic identity and message history with a recovery key if you’ve lost all your existing devices.
            <span
              class="mx_SettingsSubheader_error"
            >
              <svg
                fill="currentColor"
                height="20px"
                viewBox="0 0 24 24"
                width="20px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
                />
              </svg>
              Your key storage is out of sync. Click one of the buttons below to fix the problem.
            </span>
          </div>
        </div>
        <div
          class="mx_RecoveryPanelOutOfSync"
        >
          <button
            class="_button_vczzf_8"
            data-kind="secondary"
            data-size="sm"
            role="button"
            tabindex="0"
          >
            Forgot recovery key?
          </button>
          <button
            class="_button_vczzf_8 _has-icon_vczzf_57"
            data-kind="primary"
            data-size="sm"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="20"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 14q-.824 0-1.412-.588A1.93 1.93 0 0 1 5 12q0-.825.588-1.412A1.93 1.93 0 0 1 7 10q.824 0 1.412.588Q9 11.175 9 12t-.588 1.412A1.93 1.93 0 0 1 7 14m0 4q-2.5 0-4.25-1.75T1 12t1.75-4.25T7 6q1.676 0 3.037.825A6.2 6.2 0 0 1 12.2 9h8.375q.2 0 .387.075.188.075.338.225l2 2q.15.15.212.325.063.175.063.375t-.062.375a.9.9 0 0 1-.213.325l-3.175 3.175a1 1 0 0 1-.3.2q-.175.075-.35.1a.8.8 0 0 1-.35-.025.9.9 0 0 1-.325-.175L17.5 15l-1.425 1.075a.95.95 0 0 1-.887.15.9.9 0 0 1-.288-.15L13.375 15H12.2a6.2 6.2 0 0 1-2.162 2.175Q8.675 18 7 18m0-2q1.4 0 2.463-.85A4.03 4.03 0 0 0 10.875 13H14l1.45 1.025L17.5 12.5l1.775 1.375L21.15 12l-1-1h-9.275a4.03 4.03 0 0 0-1.412-2.15Q8.4 8 7 8 5.35 8 4.175 9.175T3 12t1.175 2.825T7 16"
              />
            </svg>
            Enter recovery key
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EncryptionUserSettingsTab /> should display the reset identity panel when the user clicks on the reset cryptographic identity panel 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsTab mx_EncryptionUserSettingsTab"
    data-testid="encryptionTab"
  >
    <div
      class="mx_SettingsTab_sections"
    >
      <nav
        class="_breadcrumb_1xygz_8"
      >
        <button
          aria-label="Back"
          class="_icon-button_m2erp_8 _subtle-bg_m2erp_29"
          role="button"
          style="--cpd-icon-button-size: 28px;"
          tabindex="0"
        >
          <div
            class="_indicator-icon_zr2a0_17"
            style="--cpd-icon-button-size: 100%;"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m13.3 17.3-4.6-4.6a.9.9 0 0 1-.213-.325A1.1 1.1 0 0 1 8.425 12q0-.2.062-.375A.9.9 0 0 1 8.7 11.3l4.6-4.6a.95.95 0 0 1 .7-.275q.425 0 .7.275a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7L10.8 12l3.9 3.9a.95.95 0 0 1 .275.7.95.95 0 0 1-.275.7.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
              />
            </svg>
          </div>
        </button>
        <ol
          class="_pages_1xygz_17"
        >
          <li>
            <a
              class="_link_1v5rz_8"
              data-kind="primary"
              data-size="small"
              rel="noreferrer noopener"
              role="button"
              tabindex="0"
            >
              Encryption
            </a>
          </li>
          <li>
            <span
              aria-current="page"
              class="_last-page_1xygz_30"
            >
              Reset encryption
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="mx_EncryptionCard"
      >
        <div
          class="mx_EncryptionCard_header"
        >
          <div
            class="_content_o77nw_8 _destructive_o77nw_34"
            data-size="large"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
              />
            </svg>
          </div>
          <h2
            class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93"
          >
            Are you sure you want to reset your identity?
          </h2>
        </div>
        <div
          class="mx_Flex mx_EncryptionCard_emphasisedContent"
          style="--mx-flex-display: flex; --mx-flex-direction: column; --mx-flex-align: normal; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
        >
          <ul
            class="_visual-list_15wzx_8"
          >
            <li
              class="_visual-list-item_1ma3e_8"
            >
              <svg
                aria-hidden="true"
                class="_visual-list-item-icon_1ma3e_17 _visual-list-item-icon-success_1ma3e_22"
                fill="currentColor"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                />
              </svg>
              Your account details, contacts, preferences, and chat list will be kept
            </li>
            <li
              class="_visual-list-item_1ma3e_8"
            >
              <svg
                aria-hidden="true"
                class="_visual-list-item-icon_1ma3e_17"
                fill="currentColor"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
                />
                <path
                  clip-rule="evenodd"
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
                  fill-rule="evenodd"
                />
              </svg>
              You will lose any message history that’s stored only on the server
            </li>
            <li
              class="_visual-list-item_1ma3e_8"
            >
              <svg
                aria-hidden="true"
                class="_visual-list-item-icon_1ma3e_17"
                fill="currentColor"
                height="24px"
                viewBox="0 0 24 24"
                width="24px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.288 7.288A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8t-.287.713A.97.97 0 0 1 12 9a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 8q0-.424.287-.713m.001 4.001A.97.97 0 0 1 12 11q.424 0 .713.287.287.288.287.713v4q0 .424-.287.712A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16v-4q0-.424.287-.713"
                />
                <path
                  clip-rule="evenodd"
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10m-2 0a8 8 0 1 1-16 0 8 8 0 0 1 16 0"
                  fill-rule="evenodd"
                />
              </svg>
              You will need to verify all your existing devices and contacts again
            </li>
          </ul>
          <span>
            Only do this if you believe your account has been compromised.
          </span>
        </div>
        <div
          class="mx_EncryptionCard_buttons"
        >
          <button
            aria-disabled="false"
            class="_button_vczzf_8 _destructive_vczzf_107"
            data-kind="primary"
            data-size="lg"
            role="button"
            tabindex="0"
          >
            Continue
          </button>
          <button
            class="_button_vczzf_8"
            data-kind="tertiary"
            data-size="lg"
            role="button"
            tabindex="0"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EncryptionUserSettingsTab /> should display the set up recovery key when the user clicks on the set up recovery key button 1`] = `
<DocumentFragment>
  <div
    class="mx_SettingsTab mx_EncryptionUserSettingsTab"
    data-testid="encryptionTab"
  >
    <div
      class="mx_SettingsTab_sections"
    />
  </div>
</DocumentFragment>
`;
